Fix-OverFlow

--- a/packages/scandipwa/src/component/ProductCompareAttributeRow/ProductCompareAttributeRow.style.scss
+++ b/packages/scandipwa/src/component/ProductCompareAttributeRow/ProductCompareAttributeRow.style.scss
@@ -53,7 +53,7 @@
         padding-inline: var(--product-compare-item-gap) calc(var(--product-compare-item-gap) + var(--prouduct-compare-additional-gap));
         width: var(--product-compare-column-width);
         text-align: justify;
-        overflow: hidden;
+        overflow: visible;
 
         img {
             height: auto;
